Changed category labels and nav bar labels. Fixed bug that caused categories hover effect to hide behind elements to their right.

--- a/style.css
+++ b/style.css
@@ -1,8 +1,8 @@
 *{
-    /* border: 1px, dashed, red; */
+    /* border: 1px dashed red; */
     margin:0;
     padding:0;
-    flex-wrap: wrap;
+    box-sizing:border-box;
 }
 body{
     min-height: 100vh;
@@ -76,7 +76,7 @@ nav li:first-child{
     width: 100%;
     overflow: hidden;
     position: relative;
-    box-shadow: 0 6px 25px rgb(225, 0, 0);
+    box-shadow: 0 15px 25px #ce0606;
 }
 
 .favorites-category{
@@ -85,7 +85,7 @@ nav li:first-child{
     padding: 10px 20px;
     background-color: #000000;
     border-radius:5px;
-    transition: transform 0.3 ease, box-shadow 0.3 ease;
+    transition: transform 0.3s ease, box-shadow 0.3s ease;
 }
 .customer-favorites{
     display: flex;
@@ -105,8 +105,7 @@ nav li:first-child{
     justify-content: center;
     font-size: 1.25rem;
     font-weight:bold;
-    transform: skew(-20deg);
-    transition: transform 0.3 ease, box-shadow 0.3 ease;
+    transition: transform 0.3s ease, box-shadow 0.3s ease;
     position: relative;
 }
 
@@ -138,17 +137,18 @@ nav li:first-child{
     content: '';
     position:absolute;
     top:0;
-    right:-20px;
-    width:40px;
+    right: 0;
+    width:20px;
     height:100%;
     background-color: inherit;
-    transform:skewX(20deg);
-    z-index:1;
+    /* transform:skewX(20deg); */
+    z-index:-1;
 }
 
 .category:hover{
     transform: scale(1.1);
-    box-shadow:0 8px 16px rgba(0, 0, 0, 1);
+    box-shadow:0 8px 16px 5px rgba(0, 0, 0, 1);
+    z-index: 10;
 }
 
 @media(max-width: 800px){
